--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url= https://panda.github.io/blob/master/public/index.html">
+<meta http-equiv="refresh" content=0; src= "public/index.html">
